--- a/src/main/webapp/login/login.html
+++ b/src/main/webapp/login/login.html
@@ -5,9 +5,10 @@
     <title>Title</title>
 </head>
 <body>
-<form method="post" id="login" enctype="multipart/form-data">
-    username:<INPUT name="username" type="username" />
-    password:<input name="password" type="password" />
+<form action="/user/login" method="post">
+    username:<input name="username" type="username" /><br/>
+    password:<input name="password" type="password" /><br/>
+    <input type="submit">
 </form>
 
 </body>
