前端框架初搭建

--- a/src/main/webapp/login/login.html
+++ b/src/main/webapp/login/login.html
@@ -5,11 +5,10 @@
     <title>Title</title>
 </head>
 <body>
-<form action="/user/login" method="post">
+<form action="/user/login.action" method="post">
     username:<input name="username" type="username" /><br/>
     password:<input name="password" type="password" /><br/>
     <input type="submit">
 </form>
-
 </body>
 </html>
